--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1firebase-firestore.js"></script>
     <script src="js/init.js"></script>
+    <script src="main.js"></script>
     <script type="module" src="cmp/mi-footer.js"></script>
     <script type="module" src="cmp/mi-progreso.js"></script>
     <script type="module" src="cmp/mi-nav.js"></script>
